Ajout d'une redirection vers la route login après le register, ajout d'un écouteur sur le 'change' des champs du formulaire

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,7 +6,7 @@
 			<div [class]="controls['email']">
 				<label class="control-label col-md-2">Email</label>
 				<div class="col-md-10">
-					<input type="email" class="form-control" name="email" [(ngModel)]="user.email" (keyup)="validateEmail()">
+					<input type="email" class="form-control" name="email" [(ngModel)]="user.email" (keyup)="validateEmail()" (keyup)="validateEmail()">
 					<span class="help-block" *ngFor="let error of errors['email']">{{error}}</span>
 				</div>
 			</div>
@@ -14,7 +14,7 @@
 			<div [class]="controls['username']">
 				<label class="control-label col-md-2">Nom d'utilisateur</label>
 				<div class="col-md-10">
-					<input type="text" class="form-control" name="username" [(ngModel)]="user.username" (keyup)="validateUsername()">
+					<input type="text" class="form-control" name="username" [(ngModel)]="user.username" (keyup)="validateUsername()" (keyup)="validateUsername()">
 					<span class="help-block" *ngFor="let error of errors['username']">{{error}}</span>
 				</div>
 			</div>
@@ -22,7 +22,7 @@
 			<div [class]="controls['password']">
 				<label class="control-label col-md-2">Mot de passe</label>
 				<div class="col-md-10">
-					<input type="password" class="form-control" name="password" [(ngModel)]="user.password" (keyup)="validatePassword()">
+					<input type="password" class="form-control" name="password" [(ngModel)]="user.password" (keyup)="validatePassword()" (keyup)="validatePassword()">
 					<span class="help-block" *ngFor="let error of errors['password']">{{error}}</span>
 				</div>
 			</div>
@@ -30,7 +30,7 @@
 			<div [class]="controls['passwordConfirm']">
 				<label class="control-label col-md-2">Confirmer le mot de passe</label>
 				<div class="col-md-10">
-					<input type="password" class="form-control" name="passwordConfirm" [(ngModel)]="user.password_confirm" (keyup)="validatePasswordConfirm()">
+					<input type="password" class="form-control" name="passwordConfirm" [(ngModel)]="user.password_confirm" (keyup)="validatePasswordConfirm()" (change)="validatePasswordConfirm()">
 					<span class="help-block" *ngFor="let error of errors['passwordConfirm']">{{error}}</span>
 				</div>
 			</div>
