--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,41 @@
-<p>
-  navbar works!
-</p>
+<div class="navbar navbar-default navbar-fixed-top">
+  	<div class="container-fluid">
+    	<div class="navbar-header">
+      		<a  class="navbar-brand">Chatt<span style="color: #00a5dc">y</span></a>
+      		<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+        		<span class="icon-bar"></span>
+        		<span class="icon-bar"></span>
+        		<span class="icon-bar"></span>
+      		</button>
+    	</div>
+    	<div class="navbar-collapse collapse" id="navbar-main">
+      		<ul class="nav navbar-nav">
+        		<li>
+          			<a href="http://news.bootswatch.com">Aide</a>
+        		</li>
+        		<li>
+          			<a href="http://news.bootswatch.com">A propos</a>
+        		</li>
+      		</ul>
+
+      		<ul class="nav navbar-nav navbar-right" *ngIf="me">
+          		<li class="dropdown" *ngIf="me.username">
+            		<a href="#" class="dropdown-toggle navbar_user_button" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user"></i> {{ me.username }} <span class="caret"></span></a>
+            		<ul class="dropdown-menu">
+              			<li><a href="#">Voir mon profil</a></li>
+              			<li><a href="#">Paramètres</a></li>
+              			<li role="separator" class="divider"></li>
+              			<li>
+                			<a href="#" class="navbar_button_link">
+                  				<button type="button" class="btn btn-danger btn-sm">Deconnexion</button>
+                			</a>
+              			</li>
+            		</ul>
+          		</li>
+      		</ul>
+
+
+
+    	</div>
+  	</div>
+</div>
