--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,11 @@
       		</ul>
 
       		<ul class="nav navbar-nav navbar-right" *ngIf="me">
+              <li *ngIf="!me.username">
+                <p class="navbar-text">
+                  <svg width='15px' height='15px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#ffffff" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="3s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg>
+                </p>
+              </li>
           		<li class="dropdown" *ngIf="me.username">
             		<a href="#" class="dropdown-toggle navbar_user_button" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user"></i> {{ me.username }} <span class="caret"></span></a>
             		<ul class="dropdown-menu">
@@ -33,6 +38,7 @@
             		</ul>
           		</li>
       		</ul>
+
 
 
 
