--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,9 @@
-<p>
-  chat works!
+<p *ngIf="!me.username" class="col-md-12 col-sm-12 col-xs-12 text-center chat_waiting_main">
+	<svg width='82px' height='82px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#333333" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="3s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg> <br />
+	Chargement...
+</p>
+
+<p *ngIf="me.username" class="chat_main">
+
+
 </p>
