--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -1,8 +1,12 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Panel title</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
+<div *ngFor="let room of rooms">
+	<div class="panel panel-default">
+	  	<div class="panel-heading">
+	    	<h3 class="panel-title">{{ room.label }}</h3>
+	  	</div>
+	  	<div class="panel-body">
+	  		<p *ngFor="let occupant of room.occupants">
+	  			{{occupant.email}}
+	  		</p>
+	  	</div>
+	</div>
 </div>
