--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,7 +31,7 @@
               			<li><a href="#">Paramètres</a></li>
               			<li role="separator" class="divider"></li>
               			<li>
-                			<a href="#" class="navbar_button_link">
+                			<a routerLink="/logout" class="navbar_button_link">
                   				<button type="button" class="btn btn-danger btn-sm">Deconnexion</button>
                 			</a>
               			</li>
