--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container login">
 	<div class="well bs-component col-md-12">
 		<form class="form-horizontal">
 			<fieldset>
