Ajout d'un margin-top sur le component Register

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container register">
 	<div class="well bs-component col-md-12">
 		<form class="form-horizontal">
 			<fieldset>
