--- a/src/app/roommanager/roommanager.component.css
+++ b/src/app/roommanager/roommanager.component.css
@@ -1,3 +1,7 @@
 .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
 	vertical-align: baseline;
 }
+
+.addBtn {
+	margin-bottom: 10px;
+}
