--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,30 +1,46 @@
 <div class="admin">
+	<div *ngIf="me">
+		<div *ngIf="me.role=='admin'">
+			<nav class="navbar navbar-inverse">
+			  	<div class="container-fluid">
+			    	<!-- Brand and toggle get grouped for better mobile display -->
+			    	<div class="navbar-header">
+			    		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-admin" aria-expanded="false">
+			        		<span class="sr-only">Toggle navigation</span>
+			        		<span class="icon-bar"></span>
+			        		<span class="icon-bar"></span>
+			        		<span class="icon-bar"></span>
+			      		</button>
+			      		<a class="navbar-brand" href="#">Administration</a>
+			    	</div>
 
-	<nav class="navbar navbar-inverse">
-	  	<div class="container-fluid">
-	    	<!-- Brand and toggle get grouped for better mobile display -->
-	    	<div class="navbar-header">
-	    		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-admin" aria-expanded="false">
-	        		<span class="sr-only">Toggle navigation</span>
-	        		<span class="icon-bar"></span>
-	        		<span class="icon-bar"></span>
-	        		<span class="icon-bar"></span>
-	      		</button>
-	      		<a class="navbar-brand" href="#">Administration</a>
-	    	</div>
+			    	<!-- Collect the nav links, forms, and other content for toggling -->
+			    	<div class="collapse navbar-collapse" id="navbar-admin">
+			      		<ul class="nav navbar-nav">
+			        		<li><a (click)="setRoomManagerVisibility()">Gestion des salles</a></li>
+			        		<li><a (click)="setUserManagerVisibility()">Gestion des utilisateurs</a></li>
+			      		</ul>
+			    	</div><!-- /.navbar-collapse -->
+			  	</div><!-- /.container-fluid -->
+			</nav>
 
-	    	<!-- Collect the nav links, forms, and other content for toggling -->
-	    	<div class="collapse navbar-collapse" id="navbar-admin">
-	      		<ul class="nav navbar-nav">
-	        		<li><a (click)="setRoomManagerVisibility()">Gestion des salles</a></li>
-	        		<li><a (click)="setUserManagerVisibility()">Gestion des utilisateurs</a></li>
-	      		</ul>
-	    	</div><!-- /.navbar-collapse -->
-	  	</div><!-- /.container-fluid -->
-	</nav>
+			<div class="container-fluid">
+				<app-roommanager *ngIf="isRoomManagerVisible"></app-roommanager>
+				<app-usermanager *ngIf="isUserManagerVisible"></app-usermanager>
+			</div>
+		</div>
 
-	<div class="container-fluid">
-		<app-roommanager *ngIf="isRoomManagerVisible"></app-roommanager>
-		<app-usermanager *ngIf="isUserManagerVisible"></app-usermanager>
+		<div *ngIf="me.role!='admin'" class="text-center col-md-12">
+			<div class="alert alert-danger access_denied" role="alert">
+				Vous n'êtes pas autorisé à accéder à cette partie de l'application
+			</div>
+		</div>
 	</div>
+
+	<div *ngIf="!logged"class="text-center col-md-12">
+		<div class="alert alert-danger access_denied" role="alert">
+			Vous n'êtes pas autorisé à accéder à cette partie de l'application
+		</div>
+	</div>
+
 </div>
