Component Navbar : ajout du lien vers '/login'

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -40,6 +40,13 @@
       		</ul>
 
 
+          <ul class="nav navbar-nav navbar-right" *ngIf="!me">
+            <li>
+              <a routerLink="/login" class="login_button">Se connecter</a>
+            </li>
+          </ul>
+
+
 
 
     	</div>
