Modification du component Roomlist : liaison avec le component userlist qui prend en paramètre le salon afin de récupèrer ses occupants

--- a/src/app/roomlist/roomlist.component.css
+++ b/src/app/roomlist/roomlist.component.css
@@ -11,3 +11,10 @@
 .panel {
 	margin-bottom: 0;
 }
+
+.contextmenu-content-hidden {
+	display: none;
+}
+.contextmenu-content-displayed {
+	display: block;
+}
