--- a/src/app/roomlist/roomlist.component.html
+++ b/src/app/roomlist/roomlist.component.html
@@ -4,10 +4,7 @@
 	    	<h3 class="panel-title">{{ room.label }}</h3>
 	  	</div>
 	  	<div class="panel-body">
-	  		<div *ngFor="let occupant of room.occupants">
-	  			{{occupant.username}}
-	  		</div>
+	  		<app-userlist [room]="room"></app-userlist>
 	  	</div>
 	</div>
 </div>
-
