--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -42,6 +42,9 @@
 
           <ul class="nav navbar-nav navbar-right" *ngIf="!me">
             <li>
+              <a routerLink="/register" class="register_button">Créer un compte</a>
+            </li>
+            <li>
               <a routerLink="/login" class="login_button">Se connecter</a>
             </li>
           </ul>
