Component chat : Passage de la variable me au component chatmessages dans le component

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -6,10 +6,14 @@
 <div *ngIf="me.username" class="chat container-fluid" [style.height.px]="window_height - 45">
 	<div class="row chat_top">haut</div>
 	<div class="row chat_middle">
-		<div class="chat_left col-md-8 col-sm-8 col-xs-7">gauche</div>
+		<div class="chat_left col-md-8 col-sm-8 col-xs-7">
+		<app-chatmessages [me]="me"></app-chatmessages>
+		</div>
 		<div class="chat_right col-md-4 col-sm-4 col-xs-5">
 			<app-roomlist [me]="me"></app-roomlist>
 		</div>
 	</div>
-	<div class="row chat_bottom">bas</div>
+	<div class="row chat_bottom">
+		<app-chatform [me]="me"></app-chatform>
+	</div>
 </div>
