--- a/src/app/chatmessages/chatmessages.component.html
+++ b/src/app/chatmessages/chatmessages.component.html
@@ -1,3 +1,3 @@
-<p>
-  chatmessages works!
-</p>
+<div *ngFor="let message of messages">
+	{{message.user.username}} : {{ message.content }}
+</div>
